# ellipsys-runner-cloud-deploy

./: .gitignore  Cargo.toml  README.md
.do/: deploy.template.yaml
.github/workflows/: publish-headless.yml
apps/runner/core/: Cargo.toml
apps/runner/core/src/: config.rs  lib.rs  poller.rs  portal_client.rs
apps/runner/core/src/brokers/: alpaca.rs  ibkr.rs  ibkr_sidecar.py  kraken.rs  mod.rs  tradelocker.rs
apps/runner/headless/: Cargo.toml  Dockerfile
apps/runner/headless/src/: main.rs
docs/: digitalocean-smoke-test.md
