[package]
name = "ellipsys-runner-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "ellipsys_runner_core"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock"] }
async-trait = "0.1"
serde_urlencoded = "0.7"
